--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         </div>
         <h3>Авторизация</h3>
         <p class="text-center">Введите пожалуйста своё фио и ник для<br>дальнейшей авторизации</p>
-        <input class="input-text" type="text" placeholder="ФИО">
-        <input class="input-text" type="text" placeholder="Введите свой ник">
-        <button class="btn">войти</button>
+        <input class="input-text" type="text" id="input__name" placeholder="ФИО">
+        <input class="input-text" type="text" id="input__nickname" placeholder="Введите свой ник">
+        <button id="button__enter" class="btn">войти</button>
     </form>
 </body>
 </html>
