--- a/index.html
+++ b/index.html
@@ -13,19 +13,32 @@
             <div class="container">
                 <div class="block-wrapper">
                     <div class="side-content">
-                        <div class="search-menu-wrapper">
-                            <div class="menu" onclick="toggleMenu(this)">
+                        <div class="sidebar-header">
+                            <div class="sidebar-header__btn-container" onclick="toggleMenu(this)">
                                 <div class="bar1"></div>
                                 <div class="bar2"></div>
                                 <div class="bar3"></div>
                             </div>
-                            <div class="search-input-wrapper">
-                                <input type="text" class="search__input" placeholder="Найти...">
+                            <div class="sidebar-header__input-search-wrapper">
+                                <input type="text" class="input-search search__input" placeholder="Найти...">
                             </div>
                         </div>
-                        <div class="list-friends">
-                            <div class="test"></div>
-                            <div class="test"></div><div class="test"></div><div class="test"></div><div class="test"></div><div class="test"></div><div class="test"></div><div class="test"></div><div class="test"></div><div class="test"></div><div class="test"></div><div class="test"></div><div class="test"></div><div class="test"></div><div class="test"></div><div class="test"></div><div class="test"></div><div class="test"></div><div class="test"></div><div class="test"></div><div class="test"></div><div class="test"></div><div class="test"></div><div class="test"></div><div class="test"></div><div class="test"></div><div class="test"></div><div class="test"></div>
+                        <div class="chat-list-wrapper">
+                            <ul class="chat-list">
+                                <li class="chat-list__chat">
+                                    <div class="avatar">
+                                        <img src="" alt="">
+                                    </div>
+                                    <div class="user-caption">
+                                        <div class="dialog-title">
+                                            <span>Виктор</span>
+                                        </div>
+                                        <div class="dialog-subtitle">
+                                            <span class="user-last-message">Сообщение...</span>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                     <div class="main-content">
