верстка главной страницы

--- a/index.html
+++ b/index.html
@@ -11,23 +11,90 @@
     <div class="content-wrapper">
         <div class="content">
             <div class="container">
-                <div class="block-wrapper">
+                <div class="main-wrapper">
                     <div class="side-content">
-                        <div class="sidebar-header">
-                            <div class="sidebar-header__btn-container" onclick="toggleMenu(this)">
-                                <div class="bar1"></div>
-                                <div class="bar2"></div>
-                                <div class="bar3"></div>
-                            </div>
-                            <div class="sidebar-header__input-search-wrapper">
-                                <input type="text" class="input-search search__input" placeholder="Найти...">
+                        <div class="sidebar-wrapper">
+                            <div class="sidebar-header">
+                                <div class="sidebar-header__btn-container" onclick="toggleMenu(this)">
+                                    <div class="bar1"></div>
+                                    <div class="bar2"></div>
+                                    <div class="bar3"></div>
+                                </div>
+                                <div class="sidebar-header__input-search-wrapper">
+                                    <input type="text" class="input-search search__input" placeholder="Найти...">
+                                </div>
                             </div>
                         </div>
                         <div class="chat-list-wrapper">
                             <ul class="chat-list">
                                 <li class="chat-list__chat">
                                     <div class="avatar">
-                                        <img src="" alt="">
+                                        <img src="image/1.png" alt="">
+                                    </div>
+                                    <div class="user-caption">
+                                        <div class="dialog-title">
+                                            <span>Виктор</span>
+                                        </div>
+                                        <div class="dialog-subtitle">
+                                            <span class="user-last-message">Сообщение...</span>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="chat-list__chat">
+                                    <div class="avatar">
+                                        <img src="image/1.png" alt="">
+                                    </div>
+                                    <div class="user-caption">
+                                        <div class="dialog-title">
+                                            <span>Виктор</span>
+                                        </div>
+                                        <div class="dialog-subtitle">
+                                            <span class="user-last-message">Сообщение...</span>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="chat-list__chat">
+                                    <div class="avatar">
+                                        <img src="image/1.png" alt="">
+                                    </div>
+                                    <div class="user-caption">
+                                        <div class="dialog-title">
+                                            <span>Виктор</span>
+                                        </div>
+                                        <div class="dialog-subtitle">
+                                            <span class="user-last-message">Сообщение...</span>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="chat-list__chat">
+                                    <div class="avatar">
+                                        <img src="image/1.png" alt="">
+                                    </div>
+                                    <div class="user-caption">
+                                        <div class="dialog-title">
+                                            <span>Виктор</span>
+                                        </div>
+                                        <div class="dialog-subtitle">
+                                            <span class="user-last-message">Сообщение...</span>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="chat-list__chat">
+                                    <div class="avatar">
+                                        <img src="image/1.png" alt="">
+                                    </div>
+                                    <div class="user-caption">
+                                        <div class="dialog-title">
+                                            <span>Виктор</span>
+                                        </div>
+                                        <div class="dialog-subtitle">
+                                            <span class="user-last-message">Сообщение...</span>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="chat-list__chat">
+                                    <div class="avatar">
+                                        <img src="image/1.png" alt="">
                                     </div>
                                     <div class="user-caption">
                                         <div class="dialog-title">
@@ -41,7 +108,26 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="main-content">
+                    <div class="block-messages">
+                        <div class="block-messages__header">
+                            <div class="block-messages__tittle">
+                                <h4>Чат</h4>
+                            </div>
+                            <div class="block-messages__subtitle">
+                                <h3>2 участника</h3>
+                            </div>
+                        </div>
+                        <div class="messages-container">
+
+                        </div>
+                        <div class="block-messages__footer">
+                            <div class="new-message-wrapper">
+                                <input type="text" class="input-message" placeholder="Введите сообщение...">
+                            </div>
+                            <div class="send-message-wrapper">
+                                <button class="send-message__button">Отправить</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
