форма загрузки фото

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </div>
         </div>
     </div>
-    <div class="modal-wrapper" id="modal-wrapper" style="display: none">
+    <div class="modal-wrapper" id="modal-wrapper-auth" style="display: none">
         <div class="modal">
             <div class="modal__content">
                 <div class="modal__close-wrapper">
@@ -159,6 +159,31 @@
                         <button class="auth-form__btn">войти</button>
                     </div>
                 </form>
+            </div>
+        </div>
+    </div>
+    <div class="modal-wrapper" id="modal-load-photo">
+        <div class="modal-load-photo">
+            <div class="modal-load-photo__content">
+                <div class="modal__close-wrapper">
+                    <button class="modal__close" id="btn_close_photo">x</button>
+                </div>
+                <div class="wrapper-load-title">
+                    <p class="load-title">Загрузка фото</p>
+                </div>
+                <div class="desc-user-wrapper">
+                    <div class="avatar-user">
+                        <img src="image/1.png" alt="">
+                    </div>
+                    <div class="user-caption">
+                        <div class="user-caption__name-row">
+                            <span class="user-caption__name">Виктор</span>
+                        </div>
+                        <div class="user-caption__status-wrapper">
+                            <span class="user-caption__status">В сети</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
