допилил загрузку фото

--- a/index.html
+++ b/index.html
@@ -190,17 +190,17 @@
             </div>
         </div>
     </div>
-    <div class="model-photo-load modal-wrapper" id="model-photo-load">
+    <div class="modal-photo-load modal-wrapper" id="modal-photo-load">
         <div class="photo-load-wrapper">
             <div class="photo-load-content">
                 <div class="img-wrapper">
-                    <img src="image/1.png" id="" alt="">
+                    <img src="" id="big-image" alt="">
                     <div class="img-wrapper__circle"></div>
                 </div>
                 <p class="photo-load__title">Область для профильной фотографии</p>
                 <div class="btn-container">
-                    <div class="btn btn-cancel">ОТМЕНА</div>
-                    <div class="btn btn-save">СОХРАНИТЬ</div>
+                    <div class="btn btn-cancel" id="btn-cancel">ОТМЕНА</div>
+                    <div class="btn btn-save" id="btn-save">СОХРАНИТЬ</div>
                 </div>
             </div>
         </div>
