--- a/index.html
+++ b/index.html
@@ -118,7 +118,44 @@
                             </div>
                         </div>
                         <div class="messages-container">
-
+                            <div class="messages-absolute-wrapper">
+                                <div class="message-row message-row-right">
+                                    <div class="message-row__text">
+                                        <p class="message__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquid consequatur corporis delectus, dolorem.</p>
+                                        <span class="message-time message-time-right">17:58</span>
+                                    </div>
+                                    <div class="user-avatar">
+                                        <img src="image/1.png">
+                                    </div>
+                                </div>
+                                <div class="message-row message-row-left">
+                                    <div class="message-row__text">
+                                        <p class="message__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquid consequatur corporis delectus, dolorem.</p>
+                                        <span class="message-time message-time-left">17:58</span>
+                                    </div>
+                                    <div class="user-avatar user-avatar-left">
+                                        <img src="image/1.png">
+                                    </div>
+                                </div>
+                                <div class="message-row message-row-right">
+                                    <div class="message-row__text">
+                                        <p class="message__text">Как у тебя дела?</p>
+                                        <span class="message-time message-time-right">17:58</span>
+                                    </div>
+                                    <div class="user-avatar">
+                                        <img src="image/1.png">
+                                    </div>
+                                </div>
+                                <div class="message-row message-row-left">
+                                    <div class="message-row__text">
+                                        <p class="message__text">Как у тебя дела?</p>
+                                        <span class="message-time message-time-left">17:58</span>
+                                    </div>
+                                    <div class="user-avatar user-avatar-left">
+                                        <img src="image/1.png">
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="block-messages__footer">
                             <div class="new-message-wrapper">
