--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <div class="modal__close-wrapper">
                     <button class="modal__close" id="modal__close">x</button>
                 </div>
-                <form action="#" class="auth-form">
+                <form action="#" class="auth-form" id="authForm">
                     <div class="auth-form__img">
                         <img src="image/avatar.png" alt="">
                     </div>
@@ -193,7 +193,7 @@
                     </div>
 
                     <div class="auth-form__btn-wrapper">
-                        <button class="auth-form__btn">войти</button>
+                        <button class="auth-form__btn" id="sendButton" type="submit">войти</button>
                     </div>
                 </form>
             </div>
