прикрутил обработку сообщений

--- a/index.html
+++ b/index.html
@@ -28,71 +28,71 @@
                         <div class="chat-list-wrapper">
                             <div class="chat-absolute-wrapper">
                                 <ul class="chat-list">
-                                    <li class="chat-list__chat">
-                                        <div class="avatar">
-                                            <img src="image/1.png" alt="">
-                                        </div>
-                                        <div class="user-caption">
-                                            <div class="dialog-title">
-                                                <span>Виктор</span>
-                                            </div>
-                                            <div class="dialog-subtitle">
-                                                <span class="user-last-message">Сообщение...</span>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li class="chat-list__chat">
-                                        <div class="avatar">
-                                            <img src="image/1.png" alt="">
-                                        </div>
-                                        <div class="user-caption">
-                                            <div class="dialog-title">
-                                                <span>Виктор</span>
-                                            </div>
-                                            <div class="dialog-subtitle">
-                                                <span class="user-last-message">Сообщение...</span>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li class="chat-list__chat">
-                                        <div class="avatar">
-                                            <img src="image/1.png" alt="">
-                                        </div>
-                                        <div class="user-caption">
-                                            <div class="dialog-title">
-                                                <span>Виктор</span>
-                                            </div>
-                                            <div class="dialog-subtitle">
-                                                <span class="user-last-message">Сообщение...</span>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li class="chat-list__chat">
-                                        <div class="avatar">
-                                            <img src="image/1.png" alt="">
-                                        </div>
-                                        <div class="user-caption">
-                                            <div class="dialog-title">
-                                                <span>Виктор</span>
-                                            </div>
-                                            <div class="dialog-subtitle">
-                                                <span class="user-last-message">Сообщение...</span>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li class="chat-list__chat">
-                                        <div class="avatar">
-                                            <img src="image/1.png" alt="">
-                                        </div>
-                                        <div class="user-caption">
-                                            <div class="dialog-title">
-                                                <span>Виктор</span>
-                                            </div>
-                                            <div class="dialog-subtitle">
-                                                <span class="user-last-message">Сообщение...</span>
-                                            </div>
-                                        </div>
-                                    </li>
+<!--                                    <li class="chat-list__chat">-->
+<!--                                        <div class="avatar">-->
+<!--                                            <img src="image/img_avatar_mes.png" alt="">-->
+<!--                                        </div>-->
+<!--                                        <div class="user-caption">-->
+<!--                                            <div class="dialog-title">-->
+<!--                                                <span>Виктор</span>-->
+<!--                                            </div>-->
+<!--                                            <div class="dialog-subtitle">-->
+<!--                                                <span class="user-last-message">Сообщение...</span>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                    </li>-->
+<!--                                    <li class="chat-list__chat">-->
+<!--                                        <div class="avatar">-->
+<!--                                            <img src="image/1.png" alt="">-->
+<!--                                        </div>-->
+<!--                                        <div class="user-caption">-->
+<!--                                            <div class="dialog-title">-->
+<!--                                                <span>Виктор</span>-->
+<!--                                            </div>-->
+<!--                                            <div class="dialog-subtitle">-->
+<!--                                                <span class="user-last-message">Сообщение...</span>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                    </li>-->
+<!--                                    <li class="chat-list__chat">-->
+<!--                                        <div class="avatar">-->
+<!--                                            <img src="image/1.png" alt="">-->
+<!--                                        </div>-->
+<!--                                        <div class="user-caption">-->
+<!--                                            <div class="dialog-title">-->
+<!--                                                <span>Виктор</span>-->
+<!--                                            </div>-->
+<!--                                            <div class="dialog-subtitle">-->
+<!--                                                <span class="user-last-message">Сообщение...</span>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                    </li>-->
+<!--                                    <li class="chat-list__chat">-->
+<!--                                        <div class="avatar">-->
+<!--                                            <img src="image/1.png" alt="">-->
+<!--                                        </div>-->
+<!--                                        <div class="user-caption">-->
+<!--                                            <div class="dialog-title">-->
+<!--                                                <span>Виктор</span>-->
+<!--                                            </div>-->
+<!--                                            <div class="dialog-subtitle">-->
+<!--                                                <span class="user-last-message">Сообщение...</span>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                    </li>-->
+<!--                                    <li class="chat-list__chat">-->
+<!--                                        <div class="avatar">-->
+<!--                                            <img src="image/1.png" alt="">-->
+<!--                                        </div>-->
+<!--                                        <div class="user-caption">-->
+<!--                                            <div class="dialog-title">-->
+<!--                                                <span>Виктор</span>-->
+<!--                                            </div>-->
+<!--                                            <div class="dialog-subtitle">-->
+<!--                                                <span class="user-last-message">Сообщение...</span>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                    </li>-->
                                 </ul>
                             </div>
                         </div>
@@ -103,7 +103,7 @@
                                 <h4>Чат</h4>
                             </div>
                             <div class="block-messages__subtitle">
-                                <h3><span id="users-Online">2</span> участника</h3>
+                                <h3 id="users-Online"></h3>
                             </div>
                         </div>
                         <div class="messages-container">
@@ -233,7 +233,6 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.js"></script>
-<!--    <script src="client.js" type="module"></script>-->
     <script src="./script.js"></script>
 </body>
 </html>
