--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                                     <div class="bar3"></div>
                                 </div>
                                 <div class="sidebar-header__input-search-wrapper">
-                                    <input type="text" class="input-search search__input" placeholder="Найти...">
+                                    <input type="text" class="input-search search__input" id="filter-input" placeholder="Найти...">
                                 </div>
                             </div>
                         </div>
