--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="content">
             <div class="container">
                 <div class="main-wrapper">
-                    <div class="side-content">
+                    <div class="side-content side-content-small">
                         <div class="sidebar-wrapper">
                             <div class="sidebar-header">
                                 <div class="sidebar-header__btn-container" id="btn_settings">
@@ -99,11 +99,18 @@
                     </div>
                     <div class="block-messages">
                         <div class="block-messages__header">
-                            <div class="block-messages__tittle">
-                                <h4>Чат</h4>
+                            <div class="block-messages__close-wrapper">
+                                <div class="block-messages__close-button">
+                                    <img src="image/arrow.svg">
+                                </div>
                             </div>
-                            <div class="block-messages__subtitle">
-                                <h3 id="users-Online"></h3>
+                            <div class="block-messages__wrapper">
+                                <div class="block-messages__tittle">
+                                    <h4>Чат</h4>
+                                </div>
+                                <div class="block-messages__subtitle">
+                                    <h3 id="users-Online">1 участник</h3>
+                                </div>
                             </div>
                         </div>
                         <div class="messages-container">
