--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                     <h4>Чат</h4>
                                 </div>
                                 <div class="block-messages__subtitle">
-                                    <h3 id="users-Online">1 участник</h3>
+                                    <h3 id="users-Online"></h3>
                                 </div>
                             </div>
                         </div>
