адаптивное последнее сообщение

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                         </div>
                         <div class="messages-container">
                             <div class="messages-absolute-wrapper" id="chat-container">
+                                <div class="test"></div>
                                 <div class="message-row message-row-right">
                                     <div class="message-row__text">
                                         <p class="message__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquid consequatur corporis delectus, dolorem.</p>
